2000-01-21  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-value.c (gconf_value_new_from_string): use new
	double conversion
	(gconf_value_to_string): use new conversion

	* gconf/gconf-internals.c (gconf_double_to_string) 
	(gconf_string_to_double): new functions to go from string
	to double, we had precision problems with this and maybe 
	still do, these functions encapsulate it. For now
	copied code from gnumeric/src/xml-io.c

	* gconf/gconftool.c (main): improve gconfd-is-running error
	message

	* gconf/gconf.c (gconf_synchronous_sync): internal-only API 
	for the synchronous sync

	* gconf/gconfd.c (gconfd_synchronous_sync): implement a way to
	force _immediate_ sync for testing purposes

2000-01-21  Havoc Pennington  <hp@pobox.com>

	* tests/Makefile.am (testpersistence_SOURCES): add new test

	* tests/testpersistence.c: New test, clears the cache after every
	set, to see if the get() function can properly load stuff off of
	disk. Right now we fail this test. Blah.

2000-01-21  Havoc Pennington  <hp@pobox.com>

	* backends/xml-cache.c (cache_clean): oops, this was broken
	before; we need to check that the dir doesn't need a sync before
	we destroy it.

	* backends/xml-dir.c (dir_sync_pending): new function

	* backends/xml-backend.c (clear_cache): implement clearing cache
	for XML backend

	* gconf/gconf.c (gconf_clear_cache): implement API here

	* gconf/GConf.idl: add clear_cache method

	* gconf/gconfd.c (context_clear_cache): add code to implement
	clear_cache IDL 

	* gconf/gconf-sources.c (gconf_sources_clear_cache): New function
	for debugging purposes

2000-01-20  Havoc Pennington  <hp@pobox.com>

	* backends/xml-entry.c (node_extract_value): Detect case where a
	pair is missing car and/or cdr and do an error instead of
	returning an invalid pair.

	* gconf/gconf-internals.c (gconf_get_lock): remove IOR debug spew

	* gconf/gconftool.c: Add --break-key and --break-directory, these
	allow you to easily torture test your application and see if