@@ -1,3 +1,14 @@
+2000-01-21  Havoc Pennington  <hp@redhat.com>
+
+	* backends/xml-cache.c (cache_clean_foreach): remove everything
+	older than or the same age as the older_than time value (i.e. 
+	put >= instead of >)
+	(cache_destroy_foreach): debug check to be sure we aren't
+	destroying unsynced directories	
+
+	* gconf/gconfd.c (context_synchronous_sync): remove sync
+	timeout/idle handlers when we do a synchronous sync
+
 2000-01-21  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf-value.c (gconf_value_new_from_string): use new
